--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.6.1",
-    "@bojagi/cli": "^0.17.1",
+    "@bojagi/cli": "^0.18.0-next.1",
     "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-image": "^2.0.5",
@@ -171,7 +171,8 @@
       "@shopify/stylelint-plugin/prettier"
     ]
   },
-  "size-limit": [{
+  "size-limit": [
+    {
       "name": "cjs",
       "path": "dist/index.js",
       "limit": "165 kB"
